fix: fix smooth scroll on mobile

--- a/src/styles/04-elements/_elements.body.scss
+++ b/src/styles/04-elements/_elements.body.scss
@@ -20,12 +20,5 @@ body {
     bottom: 0;
     height: 100%;
     -webkit-overflow-scrolling: touch;
-
-
-    @include media-breakpoint-down(lg) {
-      top: 0.5px;
-      bottom: 0.5px;
-      height: auto;
-    }
   }
 }
